fix(QES-FES Table): Attempts to fix word wrap on mobile

--- a/src/css/imports/table-dense.scss
+++ b/src/css/imports/table-dense.scss
@@ -14,6 +14,7 @@
       overflow-wrap: break-word;
       word-wrap: break-word;
       text-align: left;
+      table-layout: fixed;
 
       @media only screen and (max-width: 640px) {
         margin: 0px 10px;
@@ -77,6 +78,7 @@
       }
 
       td {
+        word-wrap: break-word;
         vertical-align: top;
         padding: 24px 10px 24px 0px;
         white-space: break-spaces;
